ocp/configs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-api-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transaction-api-service
  template:
    metadata:
      labels:
        app: transaction-api-service
    spec:
      containers:
        # --- Spring Boot Container ---
        - name: transaction-api-service
          image: docker.io/saundharpreet/transaction-api-service:1.2
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 15

        # --- Reusable Nginx Sidecar ---
        - name: nginx-proxy
          image: docker.io/saundharpreet/nginx-sidecar:1.5
          ports:
            - containerPort: 8443
          volumeMounts:
            # Mount 1: The Server Identity (Standard Folder)
            - name: server-certs
              mountPath: /etc/nginx/certs
              readOnly: true
            # Mount 2: The Master CA (New Dedicated Folder)
            - name: mtls-ca-volume
              mountPath: /etc/nginx/ca
              readOnly: true

      volumes:
        # Auto-generated by OCP Service annotation
        - name: server-certs
          secret:
            secretName: transaction-api-certs
        # The Secret you created from your base64 encoded CA
        - name: mtls-ca-volume
          secret:
            secretName: mtls-ca-secret
