ocp/configs/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: transaction-api-route
spec:
  to:
    kind: Service
    name: transaction-api-service
  port:
    targetPort: https
  tls:
    termination: passthrough
